# Raspberry_Pico

Testing_codes/: Readme.md
Testing_codes/Advanced_Timer/: scenario11_cascading_timers.c  scenario12_dynamic_timer_adjustment.c  scenario13_high_resolution_timer_test.c  scenario14_sleep_vs_busy_wait.c  scenario15_system_load_vs_timer_accuracy.c  scenario16_gpio_toggle_with_timer.c  scenario17_timer_driven_state_machine.c  scenario18_timer_latency_profiling.c  scenario19_interrupt_timer_hybrid.c  scenario20_timer_sync_across_cores.c
Testing_codes/Basic_Timer/: scenario10_multicore_timer.c  scenario3_one_shot_alarm.c  scenario4_measure_execution_time.c  scenario5_cancel_repeating_timer.c  scenario6_nested_timers.c  scenario7_multiple_timers.c  scenario8_timer_precision.c  scenario9_edge_case.c
Testing_codes/DMA/: 01_dma_basic_memcpy.c  02_dma_uart_tx.c  03_dma_i2c_read_adxl345.c  04_dma_spi_read_max345.c
Testing_codes/DMA/Advanced_examples/: 05_dma_uart_write_string.c  06_dma_memcpy_interrupt.c  07_dma_timer_trigger.c  08_dma_adc_capture.c  09_dma_uart_rx_buffered.c
Testing_codes/GPIO/GPIO_application_code/01_blink_output/: main.c  main.c.c
Testing_codes/GPIO/GPIO_application_code/02_input_button/: main.c  main.c.c
Testing_codes/GPIO/GPIO_application_code/03_interrupt_input/: main.c  main.c.c
Testing_codes/GPIO/GPIO_application_code/04_analog_read/: main.c.c
Testing_codes/GPIO/GPIO_application_code/05_digital_read_write/: main.c  main.c.c
Testing_codes/GPIO/GPIO_application_code/06_pwm_output/: main.c  main.c.c
Testing_codes/GPIO/GPIO_application_code/07_toggle_pin/: main.c  main.c.c
Testing_codes/GPIO/GPIO_application_code/08_pull_up_down/: main.c  main.c.c
Testing_codes/GPIO/GPIO_bare_metal_code/01_blink_output/: main.c.c
Testing_codes/GPIO/GPIO_bare_metal_code/02_input_button/: main.c
Testing_codes/GPIO/GPIO_bare_metal_code/03_interrupt_input/: main.c
Testing_codes/GPIO/GPIO_bare_metal_code/04_analog_read/: main.c
Testing_codes/GPIO/GPIO_bare_metal_code/05_digital_read_write/: main.c
Testing_codes/GPIO/GPIO_bare_metal_code/06_pwm_output/: main.c
Testing_codes/GPIO/GPIO_bare_metal_code/07_toggle_pin/: main.c  main.c.c
Testing_codes/GPIO/GPIO_bare_metal_code/08_pull_up_down/: main.c  main.c.c
Testing_codes/GPIO/GPIO_bare_metal_code/gpio_course_baremetal/02_input_button/: main.c.c
Testing_codes/GPIO/GPIO_bare_metal_code/gpio_course_baremetal/04_analog_read/: main.c.c
Testing_codes/GPIO/GPIO_bare_metal_code/gpio_course_baremetal/05_digital_read_write/: main.c.c
Testing_codes/GPIO/GPIO_bare_metal_code/gpio_course_baremetal/06_pwm_output/: main.c.c
Testing_codes/PIO/01_led_blink/: 01_led_blink.pio  CMakeLists.txt  main.c
Testing_codes/PIO/02_uart_tx/: 02_uart_tx.pio  CMakeLists.txt  main.c
Testing_codes/PIO/03_uart_rx/: 03_uart_rx.pio  CMakeLists.txt  main.c
Testing_codes/PIO/04_ws2812_driver/: 04_ws2812_driver.pio  CMakeLists.txt  main.c
Testing_codes/PIO/05_i2c_master/: 05_i2c_master.pio  CMakeLists.txt  main.c
Testing_codes/PIO/06_spi_master/: 06_spi_master.pio  CMakeLists.txt  main.c
Testing_codes/PIO/07_square_wave/: 07_square_wave.pio  CMakeLists.txt  main.c
Testing_codes/PIO/08_pwm_generator/: 08_pwm_generator.pio  CMakeLists.txt  main.c
Testing_codes/PIO/09_rotary_encoder/: 09_rotary_encoder.pio  CMakeLists.txt  main.c
Testing_codes/PIO/10_ir_transmit/: 10_ir_transmit.pio  CMakeLists.txt  main.c
Testing_codes/PIO/11_vga_output/: 11_vga_output.pio  CMakeLists.txt  main.c
Testing_codes/PIO/12_frequency_counter/: 12_frequency_counter.pio  CMakeLists.txt  main.c
Testing_codes/PIO/13_parallel_bus_rx/: 13_parallel_bus_rx.pio  CMakeLists.txt  main.c
Testing_codes/PIO/14_logic_analyzer/: 14_logic_analyzer.pio  CMakeLists.txt  main.c
Testing_codes/PIO/15_custom_protocol/: 15_custom_protocol.pio  CMakeLists.txt  main.c
Testing_codes/PIO/16_pio_delay/: 16_pio_delay.pio  CMakeLists.txt  main.c
Testing_codes/PIO/17_spi_slave/: 17_spi_slave.pio  CMakeLists.txt  main.c
Testing_codes/PIO/18_led_chaser/: 18_led_chaser.pio  CMakeLists.txt  main.c
Testing_codes/PIO/19_pio_dma/: 19_pio_dma.pio  CMakeLists.txt  main.c
Testing_codes/PIO/20_multi_state_machine/: 20_multi_state_machine.pio  CMakeLists.txt  main.c
Testing_codes/Protocols/I2C/: Burst_read_of_multiple_register.c  I2C_Read_Device_ID.c  I2C_Scanner.c  I2C_read.c  Write_to_Configuration_register.c
Testing_codes/Protocols/SPI/: 01_spi_init.c  02_spi_single_byte_transfer.c  03_spi_burst_read.c  04_spi_write_register.c  05_spi_read_register.c
Testing_codes/Protocols/UART/: uart_custom_config.c  uart_fifo_usage.c  uart_hello_world.c  uart_interrupt.c  uart_multibyte_send.c  uart_non_blocking_tx_rx.c  uart_tx_rx_loopback.c
Testing_codes/Protocols/UART/pico_uart_examples/: uart_non_blocking_tx_rx.c
Testing_codes/Timers/: scenario1_busy_wait_delay.c  scenario2_repeating_timer.c  scenario4_measure_execution_time.c  scenario6_nested_timers.c
